# purple

./: Cargo.toml  LICENSE  README.md
shaders/: swizzle.wgsl
src/: coords.rs  font.rs  image.rs  lib.rs  prelude.rs  purple.rs  renderer.rs  state.rs  web.rs  window_config.rs
src/context/: context.rs  font.rs  gpu.rs  mod.rs  state.rs
src/font-tmp/: mod.rs
src/prim/: affine.rs  angle.rs  bbox.rs  color.rs  dimensions.rs  mod.rs  point.rs  vec2.rs
src/scene/: canvas.rs  image.rs  mod.rs  scene.rs  text.rs  texture.rs
src/shapes/: circle.rs  mod.rs  rect.rs  rounded_rect.rs
src/text/: font.rs  mod.rs
