[package]
name = "purple"
version = "0.0.6"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crosslog = { git = "https://github.com/Deathaclops/crosslog.git" }
winit = "0.30.12"
vello = "0.5.1"
image = { version = "0.25.6", default-features = false, features = ["default-formats"] }
async-std = "1.13.2"
futures = "0.3.31"
parley = "0.5.0"

[target.wasm32-unknown-unknown.dependencies]
web-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
web-time = "1.1.0"

